[gd_scene load_steps=5 format=1]

[ext_resource path="res://BattleScreen.gd" type="Script" id=1]
[ext_resource path="res://BattleEntity.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/enemy-placeholder.png" type="Texture" id=3]
[ext_resource path="res://images/battle-hero.png" type="Texture" id=4]

[node name="BattleScreen" type="CanvasLayer"]

layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Enemies" type="Node" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 165.35, 97.8053 )
z/z = 80

[node name="Sprite" type="Sprite" parent="Enemies/Enemy1"]

transform/pos = Vector2( -3.78253, 28.6391 )
texture = ExtResource( 3 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 152.382, 51.3343 )
z/z = 60

[node name="Sprite" type="Sprite" parent="Enemies/Enemy2"]

transform/pos = Vector2( -5.94398, 26.4777 )
texture = ExtResource( 3 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 252.349, 90.2403 )
z/z = 60

[node name="Sprite" type="Sprite" parent="Enemies/Enemy3"]

transform/pos = Vector2( -3.24222, 27.0181 )
texture = ExtResource( 3 )

[node name="Hero" type="Node2D" parent="."]

transform/pos = Vector2( 73.2716, 76.9412 )

[node name="BattleEntity" parent="Hero" instance=ExtResource( 2 )]

z/z = 100

[node name="Sprite" type="Sprite" parent="Hero/BattleEntity"]

transform/pos = Vector2( 5.98738, 79.6321 )
texture = ExtResource( 4 )


